# zabbix-sendmail

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile.am  sendmail.conf  sendmail.h  testsize.c  zbx_mailstats.c
